<resources>
    <string name="app_name">Coping in 3</string>

    <string name="cope_button">COPE</string>

    <string name="intensity_of_feeling">How strong is this feeling? </string>
    <string name="strong">Overwhelming</string>
    <string name="weak">Manageable</string>

    <string name="current_feeling">I am feeling:</string>
    <string-array name="list_current_feeling">
        <item>angry</item>
        <item>scared</item>
        <item>sad</item>
        <item>nervous</item>
        <item>tired</item>
    </string-array>


    <string name="activities">I enjoy:</string>
    <string name="randomness">Randomness</string>
    <string name="exercising">Exercising</string>
    <string name="writing">Writing</string>
    <string name="yoga">Yoga</string>

    <string name="done">DONE</string>

    <string name="description">Spend 1 minute per coping strategy!</string>

    <string name="time">0:00</string>

    <string name="done_button">DONE</string>

    <string name="submit">Submit</string>
    <string name="home">Home</string>

</resources>
