<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.programmingpenguin.copingin3.MainActivity">


    <Spinner
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:entries="@array/list_current_feeling"
        android:id="@+id/listCurrentFeelings"
        android:theme="@style/Base.Widget.AppCompat.ListView.DropDown"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/intensityQuestion"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="3dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/currentFeeling"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="32dp" />

    <TextView
        android:text="@string/current_feeling"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:typeface="serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentFeeling"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp" />

    <TextView
        android:text="@string/activities"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activities"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/random"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="11dp"
        app:layout_constraintLeft_toRightOf="@+id/random" />

    <CheckBox
        android:text="@string/randomness"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:typeface="serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/random"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/weak"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="45dp" />

    <CheckBox
        android:text="@string/exercising"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:typeface="serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exercising"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/activities"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/activities" />

    <CheckBox
        android:text="@string/writing"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:typeface="serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/writing"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/random"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/random" />

    <CheckBox
        android:text="@string/yoga"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:typeface="serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yoga"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/exercising"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/exercising" />

    <ImageButton
        android:layout_width="149dp"
        android:layout_height="140dp"
        app:srcCompat="@drawable/penguin"
        android:id="@+id/copeButton"
        android:scaleType="fitCenter"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="46dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/strong"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="@string/intensity_of_feeling"
        android:textSize="16sp"
        android:typeface="serif"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/intensityQuestion"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/weak"
        android:typeface="serif"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weak"
        app:layout_constraintRight_toLeftOf="@+id/ratingBar"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/ratingBar" />

    <TextView
        android:text="@string/strong"
        android:typeface="serif"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/strong"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/ratingBar"
        android:layout_marginTop="145dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ratingBar" />

</android.support.constraint.ConstraintLayout>
